@@ -1,9 +1,10 @@
 package org.hzt.utils.collections;
 
 import org.hzt.utils.It;
+import org.hzt.utils.tuples.IndexedValue;
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -11,52 +12,52 @@ class CollectionXTest {
 
     @Test
     void testContainsNot() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
         assertTrue(strings.containsNot("strings"));
     }
 
     @Test
     void testContainsAll() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
-        Iterable<String> iterable = List.of("string", "test");
+        Iterable<String> iterable = Arrays.asList("string", "test");
 
         assertTrue(strings.containsAll(iterable));
     }
 
     @Test
     void testDoesNotContainsAll() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
-        Iterable<String> iterable = List.of("string", "test", "not");
+        Iterable<String> iterable = Arrays.asList("string", "test", "not");
 
         assertFalse(strings.containsAll(iterable));
     }
 
     @Test
     void testContainsNoneOf() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
-        Iterable<String> iterable = List.of("strings", "testa");
+        Iterable<String> iterable = Arrays.asList("strings", "testa");
 
         assertTrue(strings.containsNoneOf(iterable));
     }
 
     @Test
     void testDoesContainSome() {
-        final var strings = ListX.of("hallo", "asffasf", "string", "test");
+        final ListX<String> strings = ListX.of("hallo", "asffasf", "string", "test");
 
-        Iterable<String> iterable = List.of("string", "tesst", "not");
+        Iterable<String> iterable = Arrays.asList("string", "tesst", "not");
 
         assertFalse(strings.containsAll(iterable));
     }
 
     @Test
     void testMapMulti() {
-        final var input = ListX.of(ListX.of("a", "b", "c"), ListX.of("d", "e", "f", "g"));
+        final ListX<ListX<String>> input = ListX.of(ListX.of("a", "b", "c"), ListX.of("d", "e", "f", "g"));
 
-        final var strings = input.<String>mapMulti(Iterable::forEach);
+        final ListX<String> strings = input.mapMulti(Iterable::forEach);
 
         strings.forEach(It::println);
 
@@ -65,8 +66,8 @@ class CollectionXTest {
 
     @Test
     void testShuffled() {
-        final var integers = ListX.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
-        final var shuffled = integers.shuffled();
+        final ListX<Integer> integers = ListX.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
+        final ListX<Integer> shuffled = integers.shuffled();
 
         shuffled.forEach(It::println);
 
@@ -75,7 +76,7 @@ class CollectionXTest {
 
     @Test
     void testIfEmpty() {
-        final var list = ListX.<Integer>empty();
+        final ListX<Integer> list = ListX.empty();
         final MutableSetX<Integer> set2 = MutableSetX.of(1, 2, 3, 4, 5, 6);
 
         assertAll(
@@ -87,7 +88,7 @@ class CollectionXTest {
     @Test
     void testCollectionWithIndex() {
         final ListX<Integer> list = ListX.of(1, 2, 4, 8, 16, 32);
-        final var indexedValues = list.withIndex();
+        final ListX<IndexedValue<Integer>> indexedValues = list.withIndex();
 
         assertAll(
                 () -> assertEquals(6, list.size()),
