@@ -2,7 +2,7 @@ package org.hzt.utils.collections;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -12,27 +12,27 @@ class MutableListXTest {
 
     @Test
     void testMutableListRemoveFirst() {
-        final var integers = MutableListX.of(1, 2, 3, 4, 5);
+        final MutableListX<Integer> integers = MutableListX.of(1, 2, 3, 4, 5);
 
-        final var removed = integers.removeFirst();
-        final var removed2 = integers.removeFirst();
+        final boolean removed = integers.removeFirst();
+        final boolean removed2 = integers.removeFirst();
 
         assertAll(
                 () -> assertTrue(removed),
                 () -> assertTrue(removed2),
-                () -> assertEquals(List.of(3,4, 5), integers)
+                () -> assertEquals(Arrays.asList(3,4, 5), integers)
         );
     }
 
     @Test
     void testMutableListRemoveLast() {
-        final var integers = MutableListX.of(1, 2, 3, 4, 5);
+        final MutableListX<Integer> integers = MutableListX.of(1, 2, 3, 4, 5);
 
-        final var removed = integers.removeLast();
+        final boolean removed = integers.removeLast();
 
         assertAll(
                 () -> assertTrue(removed),
-                () -> assertEquals(List.of(1,2,3,4), integers)
+                () -> assertEquals(Arrays.asList(1, 2, 3, 4), integers)
         );
     }
 }
