@@ -14,6 +14,7 @@ import org.hzt.utils.collections.MutableListX;
 import org.hzt.utils.collections.SetX;
 import org.hzt.utils.collectors.BigDecimalCollectors;
 import org.hzt.utils.collectors.CollectorsX;
+import org.hzt.utils.iterators.functional_iterator.AtomicIterator;
 import org.hzt.utils.numbers.IntX;
 import org.hzt.utils.ranges.IntRange;
 import org.hzt.utils.sequences.Sequence;
@@ -28,7 +29,6 @@ import org.junit.jupiter.api.Test;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.time.LocalDate;
-import java.time.Month;
 import java.time.Period;
 import java.time.Year;
 import java.util.ArrayDeque;
@@ -42,6 +42,7 @@ import java.util.IntSummaryStatistics;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
@@ -128,7 +129,7 @@ class IterableXTest {
     void testWithIndicesZipWithNext2() {
         final ListX<Museum> museums = ListX.of(TestSampleGenerator.getMuseumListContainingNulls());
 
-        final var sumsOfThree = museums
+        final ListX<Long> sumsOfThree = museums
                 .flatMap(Museum::getPaintings)
                 .indices()
                 .boxed()
@@ -159,7 +160,7 @@ class IterableXTest {
     @Test
     void testSortedIfOfComparableType() {
         MutableListX<Integer> list = MutableListX.of(1, 3, 5, 4, 2, 7, 214, 5, 8, 3, 4, 123);
-        final var sorted = list.sorted();
+        final IterableX<Integer> sorted = list.sorted();
         assertIterableEquals(ListX.of(1, 2, 3, 3, 4, 4, 5, 5, 7, 8, 123, 214), sorted);
     }
 
@@ -176,7 +177,7 @@ class IterableXTest {
         final BigDecimal expected = bankAccountList.stream()
                 .max(Comparator.comparing(BankAccount::getBalance))
                 .map(BankAccount::getBalance)
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         final BigDecimal actual = bankAccountList.maxOf(BankAccount::getBalance);
 
@@ -192,7 +193,7 @@ class IterableXTest {
         final BigDecimal expected = list.stream()
                 .min(Comparator.comparing(BankAccount::getBalance))
                 .map(BankAccount::getBalance)
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         final BigDecimal actual = list.minOf(BankAccount::getBalance);
 
@@ -210,7 +211,7 @@ class IterableXTest {
         final Painting expected = auction.getPaintings().stream()
                 .filter(painting -> !painting.isInMuseum())
                 .findFirst()
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         final Painting firstPaintingNotInMuseum = auction.firstNot(Painting::isInMuseum);
 
@@ -376,7 +377,7 @@ class IterableXTest {
     void testUnion() {
         ListX<Integer> list = ListX.of(1, 2, 10, 4, 5, 10, 6, 5, 3, 5, 6);
 
-        final var union = list.union(List.of(2, 3, 4, 5, 7));
+        final SetX<Integer> union = list.union(Arrays.asList(2, 3, 4, 5, 7));
 
         assertEquals(SetX.of(1, 2, 3, 4, 5, 6, 7, 10), union);
     }
@@ -418,10 +419,10 @@ class IterableXTest {
 
     @Test
     void testIntersect() {
-        final var integers = ListX.of(1, 2, 3, 4, 5, 7);
-        final var otherInts = Arrays.asList(1, 4, 5, 6);
+        final ListX<Integer> integers = ListX.of(1, 2, 3, 4, 5, 7);
+        final List<Integer> otherInts = Arrays.asList(1, 4, 5, 6);
 
-        final var intersect = integers.intersect(otherInts);
+        final SetX<Integer> intersect = integers.intersect(otherInts);
 
         assertEquals(SetX.of(1, 4, 5), intersect);
     }
@@ -472,11 +473,11 @@ class IterableXTest {
 
     @Test
     void zipWithNextCanHandleSameParameterValues() {
-        final var inputList = ListX.of(1, 1, 1, 2, 3, 2, 2, 2, 2);
-        final var inputSequence = Sequence.of(1, 1, 1, 2, 3, 2, 2, 2, 2);
+        final ListX<Integer> inputList = ListX.of(1, 1, 1, 2, 3, 2, 2, 2, 2);
+        final Sequence<Integer> inputSequence = Sequence.of(1, 1, 1, 2, 3, 2, 2, 2, 2);
 
-        final var zippedList = inputList.zipWithNext().toListXOf(Pair::of);
-        final var zippedSequence = inputSequence.zipWithNext().toListXOf(Pair::of);
+        final ListX<Pair<Integer, Integer>> zippedList = inputList.zipWithNext().toListXOf(Pair::of);
+        final ListX<Pair<Integer, Integer>> zippedSequence = inputSequence.zipWithNext().toListXOf(Pair::of);
 
         zippedSequence.forEach(It::println);
 
@@ -521,7 +522,7 @@ class IterableXTest {
 
         It.println("integers = " + integers);
 
-        assertIterableEquals(List.of(5, 10, 6, 5, 3, 5, 6), integers);
+        assertIterableEquals(Arrays.asList(5, 10, 6, 5, 3, 5, 6), integers);
     }
 
     @Test
@@ -534,7 +535,7 @@ class IterableXTest {
 
         It.println("integers = " + integers);
 
-        assertIterableEquals(List.of(10, 6, 5, 3, 5, 6), integers);
+        assertIterableEquals(Arrays.asList(10, 6, 5, 3, 5, 6), integers);
     }
 
     @Test
@@ -602,7 +603,7 @@ class IterableXTest {
     void testAverageOf() {
         ListX<Painting> list = ListX.of(TestSampleGenerator.createPaintingList());
 
-        final double expected = list.stream().mapToInt(Painting::ageInYears).average().orElseThrow();
+        final double expected = list.stream().mapToInt(Painting::ageInYears).average().orElseThrow(NoSuchElementException::new);
 
         final double actual = list.averageOf(Painting::ageInYears);
 
@@ -644,7 +645,7 @@ class IterableXTest {
 
         final Painting actual = paintings.stream()
                 .findFirst()
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         assertEquals(expected, actual);
     }
@@ -670,7 +671,7 @@ class IterableXTest {
 
         assertEquals("Lentetuin, de pastorietuin te Nuenen in het voorjaar", actual
                 .map(Painting::name)
-                .orElseThrow());
+                .orElseThrow(NoSuchElementException::new));
     }
 
     @Test
@@ -775,14 +776,14 @@ class IterableXTest {
                 .map(Painting::painter)
                 .map(Painter::getDateOfBirth)
                 .max(Comparator.naturalOrder())
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         final LocalDate max = paintingList.stream()
                 .map(Painting::painter)
                 .collect(toListX())
                 .maxOf(Painter::getDateOfBirth);
 
-        final var actual = paintingList
+        final LocalDate actual = paintingList
                 .mapNotNull(Painting::painter)
                 .maxOf(Painter::getDateOfBirth);
 
@@ -800,18 +801,11 @@ class IterableXTest {
                 .map(Painting::painter)
                 .collect(Collectors.toMap(Painter::getDateOfBirth, Painter::getLastname, (a, b) -> a));
 
-        final Set<LocalDate> expectedLocalDates = expected.keySet().stream()
-                .flatMap(date -> date.datesUntil(LocalDate.of(2000, Month.JANUARY, 1)))
-                .collect(toSet());
-
-        final MapX<LocalDate, String> actual = Sequence.of(paintingList)
+        final MapX<LocalDate, String> actual =ListX.of(paintingList)
                 .map(Painting::painter)
                 .toMapX(Painter::getDateOfBirth, Painter::getLastname);
 
-        assertAll(
-                () -> assertEquals(expected, actual),
-                () -> assertTrue(expectedLocalDates.containsAll(actual.keySet()))
-        );
+        assertEquals(expected, actual);
     }
 
     @Test
@@ -826,7 +820,7 @@ class IterableXTest {
                 .map(Customer::getCustomerId)
                 .filter(Objects::nonNull)
                 .max(Comparator.naturalOrder())
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         final String actual = bankAccounts
                 .mapNotNull(BankAccount::getCustomer)
@@ -923,9 +917,9 @@ class IterableXTest {
 
     @Test
     void testDistinct() {
-        final var integers = ListX.of(1, 1, 2, 3, 2, 4, 5, 3, 5, 6);
+        final ListX<Integer> integers = ListX.of(1, 1, 2, 3, 2, 4, 5, 3, 5, 6);
 
-        final var distinct = integers.distinct();
+        final ListX<Integer> distinct = integers.distinct();
 
         assertEquals(ListX.of(1, 2, 3, 4, 5, 6), distinct);
     }
@@ -963,23 +957,23 @@ class IterableXTest {
 
     @Test
     void testIteratorX() {
-        final var expected = new ArrayList<String>();
-        final var actual = new ArrayList<String>();
-        final var strings = ListX.of("hello", "this", "is", "a", "test");
+        final List<String> expected = new ArrayList<>();
+        final List<String> actual = new ArrayList<>();
+        final ListX<String> strings = ListX.of("hello", "this", "is", "a", "test");
 
         strings.iterator().forEachRemaining(expected::add);
-        final var stringIteratorX = strings.atomicIterator();
+        final AtomicIterator<String> stringIteratorX = strings.atomicIterator();
         //noinspection StatementWithEmptyBody
-        while (stringIteratorX.tryAdvance(actual::add)) ;
+        while(stringIteratorX.tryAdvance(actual::add));
 
         assertEquals(expected, actual);
     }
 
     @Test
     void testToBooleanArray() {
-        final var sequence = Sequence.of("This", "is", "a", "test");
+        final Sequence<String> sequence = Sequence.of("This", "is", "a", "test");
 
-        final var booleans = sequence.toBooleanArray(s -> s.contains("i"));
+        final boolean[] booleans = sequence.toBooleanArray(s -> s.contains("i"));
 
         assertArrayEquals(new boolean[]{true, true, false, false}, booleans);
     }
