@@ -2,6 +2,7 @@ package org.hzt.utils.sequences;
 
 import org.hzt.utils.It;
 import org.hzt.utils.collections.MapX;
+import org.hzt.utils.collections.MutableMapX;
 import org.hzt.utils.tuples.Pair;
 import org.junit.jupiter.api.Test;
 
@@ -9,9 +10,9 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.Month;
 import java.time.Year;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
-import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -22,9 +23,9 @@ class EntrySequenceTest {
 
     @Test
     void testfilterValuesAndMapValues() {
-        final var mapX = MapX.of("1", 1, "2", 2, "3", 3, "4", 4);
+        final MapX<String, Integer> mapX = MapX.of("1", 1, "2", 2, "3", 3, "4", 4);
 
-        final var resultMap = mapX.asSequence()
+        final MapX<String, LocalDate> resultMap = mapX.asSequence()
                 .filterValues(value -> value <= 3)
                 .onEach((k, v) -> It.println("key: " + k + ", value: " + v))
                 .mapByValues(day -> LocalDate.of(2000, Month.JANUARY, day))
@@ -32,15 +33,15 @@ class EntrySequenceTest {
 
         assertAll(
                 () -> assertEquals(3, resultMap.size()),
-                () -> assertEquals(Set.of("1", "2", "3"), resultMap.keySet())
+                () -> assertEquals(new HashSet<>(Arrays.asList("1", "2", "3")), resultMap.keySet())
         );
     }
 
     @Test
     void testMapValuesBothByKeyAndValue() {
-        final var map = MapX.of("1", 1, "2", 2, "3", 3, "4", 4);
+        final MapX<String, Integer> map = MapX.of("1", 1, "2", 2, "3", 3, "4", 4);
 
-        final var resultMap = map.asSequence()
+        final MapX<String, LocalDate> resultMap = map.asSequence()
                 .filterValues(value -> value <= 3)
                 .mapValues((month, day) -> LocalDate.of(2000, Month.of(Integer.parseInt(month)), day))
                 .onEachValue(It::println)
@@ -54,7 +55,7 @@ class EntrySequenceTest {
 
     @Test
     void testToEntrySequence() {
-        final var yearStringMap = Sequence.generate(1, i -> ++i)
+        final MutableMapX<Year, BigDecimal> yearStringMap = Sequence.generate(1, i -> ++i)
                 .asEntrySequence(It::self, BigDecimal::valueOf)
                 .mapByKeys(Year::of)
                 .takeWhileKeys(year -> year.isBefore(Year.of(2001)))
@@ -70,9 +71,9 @@ class EntrySequenceTest {
 
     @Test
     void testToEntrySequenceFromPairSequence() {
-        final var yearStringMap = Sequence.generate(1, i -> ++i)
+        final MutableMapX<Year, Integer> yearStringMap = Sequence.generate(1, i -> ++i)
                 .zipWithNext(Pair::of)
-                .asEntrySequence(It::self)
+                .asEntrySequence(t -> It.self(t))
                 .mapByKeys(Year::of)
                 .takeWhileKeys(year -> year.isBefore(Year.of(2001)))
                 .skip(20)
@@ -86,7 +87,7 @@ class EntrySequenceTest {
 
     @Test
     void testToEntrySequenceByZipWithNext() {
-        final var yearStringMap = Sequence.generate(0, i -> ++i)
+        final MutableMapX<Year, Year> yearStringMap = Sequence.generate(0, i -> ++i)
                 .map(Year::of)
                 .takeWhileInclusive(year -> year.isBefore(Year.of(2000)))
                 .zipWithNext()
@@ -101,30 +102,30 @@ class EntrySequenceTest {
 
     @Test
     void testMerge() {
-        final var mergedZipWithNext = Sequence.of(1, 2, 3, 4, 5, 6, 7, 8)
+        final List<Integer> mergedZipWithNext = Sequence.of(1, 2, 3, 4, 5, 6, 7, 8)
                 .zipWithNext()
                 .merge()
                 .toList();
 
-        assertEquals(List.of(1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 7, 8), mergedZipWithNext);
+        assertEquals(Arrays.asList(1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 6, 7, 7, 8), mergedZipWithNext);
     }
 
     @Test
     void testMergeValues() {
-        final var mergedZipWithNext = Sequence.of(1, 2, 3, 4, 5, 6, 7, 8)
+        final List<Integer> mergedZipWithNext = Sequence.of(1, 2, 3, 4, 5, 6, 7, 8)
                 .associateWith(String::valueOf)
                 .mergeValues(String::length)
                 .toList();
 
-        assertEquals(List.of(1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1), mergedZipWithNext);
+        assertEquals(Arrays.asList(1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 1), mergedZipWithNext);
     }
 
     @Test
     void testTerminalOppMergeOfTwoDifferentTypesThrowsException() {
-        final var map = Map.of(1, "2", 2, "2", 3, "3");
-        final var stringSequence = EntrySequence.ofMap(map).merge();
+        final MapX<Integer, String> map = MapX.of(1, "2", 2, "2", 3, "3");
+        final Sequence<String> stringSequence = EntrySequence.of(map).merge();
 
-        final var exception = assertThrows(IllegalStateException.class, stringSequence::toList);
+        final IllegalStateException exception = assertThrows(IllegalStateException.class, stringSequence::toList);
         assertEquals("Key and value not of same type. Merge not allowed", exception.getMessage());
     }
 
