@@ -21,15 +21,17 @@ import org.hzt.utils.numbers.IntX;
 import org.hzt.utils.numbers.LongX;
 import org.hzt.utils.ranges.IntRange;
 import org.hzt.utils.sequences.primitives.IntSequence;
+import org.hzt.utils.statistics.IntStatistics;
 import org.hzt.utils.strings.StringX;
 import org.hzt.utils.test.Generator;
+import org.hzt.utils.tuples.IndexedValue;
+import org.hzt.utils.tuples.Pair;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.math.BigDecimal;
-import java.math.MathContext;
 import java.math.RoundingMode;
 import java.time.Instant;
 import java.time.LocalDate;
@@ -47,11 +49,13 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
 import java.util.Random;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 import static java.lang.System.setProperty;
 import static org.junit.jupiter.api.Assertions.*;
@@ -89,7 +93,7 @@ class SequenceTest {
     void testSimpleStreamWithFilterYieldsIteratorWithNext() {
         final ListX<Integer> list = ListX.of(1, 2, 3, 4, 5, 6);
 
-        final var sequence = Sequence.of(list)
+        final Sequence<ListX<IndexedValue<Integer>>> sequence = Sequence.of(list)
                 .filter(SequenceTest::filterNotCalledWhenNotConsumed)
                 .withIndex()
                 .windowed(4);
@@ -111,7 +115,7 @@ class SequenceTest {
                 .map(String::length)
                 .filter(l -> l > 3)
                 .reduce(Integer::sum)
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         assertEquals(9, sum);
     }
@@ -123,7 +127,7 @@ class SequenceTest {
                 .map(String::length)
                 .map(Double::valueOf)
                 .reduce(Double::sum)
-                .orElseThrow();
+                .orElseThrow(NoSuchElementException::new);
 
         assertEquals(17, sum);
     }
@@ -132,7 +136,7 @@ class SequenceTest {
     void testFilterIndexed() {
         ListX<String> list = ListX.of("Hallo", "dit", "is", "een", "test");
 
-        final var sum = Sequence.of(list)
+        final long sum = Sequence.of(list)
                 .map(String::length)
                 .filterIndexed((index, length) -> length > 2 && IntX.isOdd(index))
                 .longSumOf(It::self);
@@ -142,9 +146,9 @@ class SequenceTest {
 
     @Test
     void testMapNotNull() {
-        var list = ListX.of(TestSampleGenerator.createSampleBankAccountListContainingNulls());
+       ListX<BankAccount> list = ListX.of(TestSampleGenerator.createSampleBankAccountListContainingNulls());
 
-        final var sum = Sequence.of(list)
+        final ListX<BigDecimal> sum = Sequence.of(list)
                 .mapNotNull(BankAccount::getBalance)
                 .toMutableList();
 
@@ -176,9 +180,9 @@ class SequenceTest {
 
     @Test
     void testMapFilterReduceToSet() {
-        var list = ListX.of("Hallo", "dit", "is", "een", "test");
+       ListX<String> list = ListX.of("Hallo", "dit", "is", "een", "test");
 
-        final var result = list.asSequence()
+        final SetX<Integer> result = list.asSequence()
                 .map(String::length)
                 .toSetX();
 
@@ -190,8 +194,8 @@ class SequenceTest {
         final ListX<Iterable<String>> list = ListX.of(ListX.of("Hallo", "dit"), SetX.of("is", "een"),
                 new ArrayDeque<>(Collections.singleton("test")));
 
-        final var result = list.asSequence()
-                .flatMap(It::self)
+        final ListX<String> result = list.asSequence()
+                .flatMap(t -> It.self(t))
                 .filter(s -> s.length() > 3)
                 .filterNot(String::isEmpty)
                 .toListX();
@@ -206,7 +210,7 @@ class SequenceTest {
         final ListX<Iterable<String>> list = ListX.of(ListX.of("Hallo", "dit"), SetX.of("is", "een"),
                 new ArrayDeque<>(Collections.singleton("test")));
 
-        final var result = list.asSequence()
+        final ListX<String> result = list.asSequence()
                 .<String>mapMulti(Iterable::forEach)
                 .filter(s -> s.length() > 3)
                 .filterNot(String::isEmpty)
@@ -222,7 +226,7 @@ class SequenceTest {
         final ListX<CollectionX<String>> list = ListX.of(ListX.of("Hallo", "dit"), SetX.of("is", "een"),
                 SetX.of("test"));
 
-        final var result = list.asSequence()
+        final IntList result = list.asSequence()
                 .mapMultiToInt((strings, accept) -> strings
                         .mapToInt(String::length)
                         .forEachInt(accept))
@@ -258,17 +262,17 @@ class SequenceTest {
 
     @Test
     void testFlatMapStream() {
-        final var charInts = Sequence.of("hallo", "test")
+        final List<Integer> charInts = Sequence.of("hallo", "test")
                 .map(String::chars)
                 .flatMapStream(IntStream::boxed)
                 .toList();
 
-        assertEquals(List.of(104, 97, 108, 108, 111, 116, 101, 115, 116), charInts);
+        assertEquals(Arrays.asList(104, 97, 108, 108, 111, 116, 101, 115, 116), charInts);
     }
 
     @Test
     void testTransform() {
-        final var map = Sequence.of("hallo", "test")
+        final MapX<Integer, String> map = Sequence.of("hallo", "test")
                 .map(String::chars)
                 .flatMapStream(IntStream::boxed)
                 .transform(this::toFilteredMapX);
@@ -284,7 +288,7 @@ class SequenceTest {
 
     @Test
     void testGenerateSequence() {
-        final var strings = Sequence.generate(0, i -> ++i)
+        final ListX<Integer> strings = Sequence.generate(0, i -> ++i)
                 .map(Generator::fib)
                 .filter(LongX::isOdd)
                 .take(12)
@@ -336,26 +340,26 @@ class SequenceTest {
     void testSkipWhile() {
         ListX<Integer> list = ListX.of(1, 2, 10, 4, 5, 10, 6, 5, 3, 5, 6);
 
-        final var integers = list.asSequence()
+        final List<Integer> integers = list.asSequence()
                 .skipWhile(i -> i != 5)
                 .toList();
 
         It.println("integers = " + integers);
 
-        assertEquals(List.of(5, 10, 6, 5, 3, 5, 6), integers);
+        assertEquals(Arrays.asList(5, 10, 6, 5, 3, 5, 6), integers);
     }
 
     @Test
     void testSkipWhileInclusive() {
         ListX<Integer> list = ListX.of(1, 2, 10, 4, 5, 10, 6, 5, 3, 5, 6);
 
-        final var integers = list.asSequence()
+        final List<Integer> integers = list.asSequence()
                 .skipWhileInclusive(i -> i != 5)
                 .toList();
 
         It.println("integers = " + integers);
 
-        assertEquals(List.of(10, 6, 5, 3, 5, 6), integers);
+        assertEquals(Arrays.asList(10, 6, 5, 3, 5, 6), integers);
     }
 
     @Test
@@ -377,9 +381,9 @@ class SequenceTest {
 
     @Test
     void testDistinctBy() {
-        final var integers = Sequence.of("hallo", "hoe", "is", "het");
+        final Sequence<String> integers = Sequence.of("hallo", "hoe", "is", "het");
 
-        final var strings = integers
+        final List<String> strings = integers
                 .distinctBy(String::length)
                 .map(StringX::of)
                 .map(StringX::reversed)
@@ -387,7 +391,7 @@ class SequenceTest {
 
         It.println("strings = " + strings);
 
-        assertEquals(List.of("ollah", "eoh", "si"), strings);
+        assertEquals(Arrays.asList("ollah", "eoh", "si"), strings);
     }
 
     @Nested
@@ -397,7 +401,7 @@ class SequenceTest {
         void testGenerateWindowedThenMapMultiToList() {
             MutableListX<ListX<Integer>> windows = MutableListX.empty();
 
-            final var result = Sequence.generate(0, i -> ++i)
+            final ListX<Integer> result = Sequence.generate(0, i -> ++i)
                     .windowed(8, 3)
                     .onEach(windows::add)
                     .takeWhile(s -> s.intSumOf(It::asInt) < 1_000_000)
@@ -413,13 +417,13 @@ class SequenceTest {
 
         @Test
         void testWindowedThrowsExceptionWhenStepSizeNegative() {
-            final var integers = IntSequence.of(0, 9).boxed();
-            assertThrows(IllegalArgumentException.class, () -> integers.windowed(-4));
+            final IntRange range = IntRange.of(0, 9);
+            assertThrows(IllegalArgumentException.class, () -> range.windowed(-4));
         }
 
         @Test
         void testWindowedStepGreaterThanWindowSizeWithPartialWindow() {
-            final var windows = IntRange.of(0, 98)
+            final ListX<ListX<Integer>> windows = IntRange.of(0, 98)
                     .boxed()
                     .windowed(5, 6, true)
                     .toListX();
@@ -436,7 +440,7 @@ class SequenceTest {
 
         @Test
         void testWindowedStepGreaterThanWindowSizeNoPartialWindow() {
-            final var windows = IntRange.of(0, 98)
+            final ListX<ListX<Integer>> windows = IntRange.of(0, 98)
                     .boxed()
                     .windowed(5, 6)
                     .toListX();
@@ -452,7 +456,7 @@ class SequenceTest {
 
         @Test
         void testWindowedStepSmallerThanWindowSizeWithPartialWindow() {
-            final var windows = IntRange.closed(0, 10)
+            final ListX<ListX<Integer>> windows = IntRange.closed(0, 10)
                     .boxed()
                     .windowed(5, 2, true)
                     .toListX();
@@ -468,7 +472,7 @@ class SequenceTest {
 
         @Test
         void testWindowedStepSmallerThanWindowSizeNoPartialWindow() {
-            final var windows = IntRange.of(0, 9)
+            final ListX<ListX<Integer>> windows = IntRange.of(0, 9)
                     .boxed()
                     .windowed(4, 2)
                     .toListX();
@@ -484,7 +488,7 @@ class SequenceTest {
 
         @Test
         void testWindowedVariableSize() {
-            final var windows = IntRange.of(0, 40)
+            final ListX<ListX<Integer>> windows = IntRange.of(0, 40)
                     .boxed()
                     .windowed(1, n -> ++n, 4, true, It::self)
                     .toListX();
@@ -500,7 +504,7 @@ class SequenceTest {
 
         @Test
         void testWindowedSizeGreaterThanSequenceSizeNoPartialWindowGivesEmptyList() {
-            final var windows = IntSequence.of(0, 8)
+            final ListX<ListX<Integer>> windows = IntSequence.of(0, 8)
                     .boxed()
                     .windowed(10)
                     .toListX();
@@ -512,7 +516,7 @@ class SequenceTest {
 
         @Test
         void testSequenceWindowedTransformed() {
-            final var sizes = IntRange.of(0, 1_000)
+            final ListX<Integer> sizes = IntRange.of(0, 1_000)
                     .filter(i -> IntX.multipleOf(5).test(i))
                     .boxed()
                     .windowed(51, 7)
@@ -540,7 +544,7 @@ class SequenceTest {
 
     @Test
     void testZipWithNext() {
-        final var sums = IntRange.of(0, 1_000)
+        final ListX<Integer> sums = IntRange.of(0, 1_000)
                 .filter(IntX.multipleOf(10))
                 .onEach(i -> It.print(i + ", "))
                 .boxed()
@@ -558,22 +562,22 @@ class SequenceTest {
 
     @Test
     void testSequenceOfMap() {
-        final var map = Map.of(1, "a", 2, "b", 3, "c", 4, "d");
+        final MapX<Integer, String> map = MapX.of(1, "a", 2, "b", 3, "c", 4, "d");
 
-        final var mapX = Sequence.ofMap(map)
+        final MapX<Integer, Character> entries = Sequence.of(map)
                 .mapByValues(s -> StringX.of(s).first())
                 .filterValues(Character::isLetter)
                 .filterKeys(IntX::isEven)
                 .toMapX();
 
-        assertEquals(2, mapX.size());
+        assertEquals(2, entries.size());
     }
 
     @Test
     void testSequenceAssociateWith() {
-        final var list = ListX.of(1, 2, 3, 4);
+        final ListX<Integer> list = ListX.of(1, 2, 3, 4);
 
-        final var map = list.asSequence()
+        final MapX<Integer, Character> map = list.asSequence()
                 .associateWith(String::valueOf)
                 .onEach(It::println)
                 .mapByValues(s -> StringX.of(s).first())
@@ -586,7 +590,7 @@ class SequenceTest {
 
     @Test
     void testEmpty() {
-        final var list = Sequence.empty().toList();
+        final List<Object> list = Sequence.empty().toList();
         assertTrue(list.isEmpty());
     }
 
@@ -597,13 +601,13 @@ class SequenceTest {
 
     @Test
     void testSequenceFromStream() {
-        final var stream = IntStream.range(0, 100).boxed();
+        final Stream<Integer> stream = IntStream.range(0, 100).boxed();
 
-        final var list = Sequence.ofStream(stream)
+        final List<IndexedValue<Integer>> list = Sequence.ofStream(stream)
                 .filter(IntX::isEven)
                 .sorted()
                 .windowed(3, true)
-                .flatMap(It::self)
+                .flatMap(t -> It.self(t))
                 .withIndex()
                 .toList();
 
@@ -623,17 +627,17 @@ class SequenceTest {
 
     @Test
     void testGeneratedSequenceCanBeConsumedMultipleTimes() {
-        var leapYears = IntRange.from(1900).upTo(2000).step(2)
+        Sequence<Year> leapYears = IntRange.from(1900).upTo(2000).step(2)
                 .boxed()
                 .map(Year::of)
                 .filter(Year::isLeap);
 
-        final var first = leapYears.first();
-        final var last = leapYears.last();
+        final Year first = leapYears.first();
+        final Year last = leapYears.last();
 
         It.println("first = " + first);
         It.println("last = " + last);
-        final var stats = leapYears.intStatsOf(Year::getValue);
+        final IntStatistics stats = leapYears.intStatsOf(Year::getValue);
 
         assertAll(
                 () -> assertEquals(Year.of(1904), first),
@@ -644,16 +648,16 @@ class SequenceTest {
 
     @Test
     void testSequenceCanBeConsumedMultipleTimes() {
-        var names = Sequence.of(List.of(1, 2, 3, 4, 5, 3, -1, 6, 12))
+        Sequence<Year> names = Sequence.of(Arrays.asList(1, 2, 3, 4, 5, 3, -1, 6, 12))
                 .onEach(It::println)
                 .mapNotNull(Year::of)
                 .sorted();
 
-        final var first = names.first();
+        final Year first = names.first();
         It.println("first = " + first);
         It.println("first = " + names.first());
-        final var nameList = names.toList();
-        final var last = names.last();
+        final List<Year> nameList = names.toList();
+        final Year last = names.last();
 
 
         It.println("last = " + last);
@@ -670,7 +674,7 @@ class SequenceTest {
     void testSequenceAsIntRange() {
         final int year = 2020;
 
-        final var daysOfYear = Sequence
+        final IntList daysOfYear = Sequence
                 .generate(LocalDate.of(year, Month.JANUARY, 1), date -> date.plusDays(1))
                 .takeWhile(date -> date.getYear() == year)
                 .mapToInt(LocalDate::getDayOfMonth)
@@ -697,7 +701,7 @@ class SequenceTest {
     void testToSortedLocalDateTime() {
         final LocalDateTime initDateTime = LocalDateTime.of(2000, Month.JANUARY, 1, 0, 0, 0);
 
-        final var sorted = IntRange.of(0, 1_000)
+        final ListX<LocalDateTime> sorted = IntRange.of(0, 1_000)
                 .mapToObj(initDateTime::plusDays)
                 .sorted()
                 .toListX();
@@ -710,52 +714,52 @@ class SequenceTest {
 
     @Test
     void testIntersperseByPrevious() {
-        final var integers = Sequence.generate(0, i -> --i)
+        final List<Integer> integers = Sequence.generate(0, i -> --i)
                 .take(10)
                 .intersperse(i -> ++i)
                 .toList();
 
         System.out.println("integers = " + integers);
 
-        assertEquals(List.of(0, 1, -1, 0, -2, -1, -3, -2, -4, -3, -5, -4, -6, -5, -7, -6, -8, -7, -9), integers);
+        assertEquals(Arrays.asList(0, 1, -1, 0, -2, -1, -3, -2, -4, -3, -5, -4, -6, -5, -7, -6, -8, -7, -9), integers);
     }
 
     @Test
     void testIntersperseConstantValue() {
-        final var integers = Sequence.generate(0, i -> --i)
+        final List<Integer> integers = Sequence.generate(0, i -> --i)
                 .take(10)
                 .intersperse(5)
                 .toList();
 
         System.out.println("integers = " + integers);
 
-        assertEquals(List.of(0, 5, -1, 5, -2, 5, -3, 5, -4, 5, -5, 5, -6, 5, -7, 5, -8, 5, -9), integers);
+        assertEquals(Arrays.asList(0, 5, -1, 5, -2, 5, -3, 5, -4, 5, -5, 5, -6, 5, -7, 5, -8, 5, -9), integers);
     }
 
     @Test
     void testIntersperseVariable() {
-        final var integers = Sequence.generate(0, i -> --i)
+        final List<Integer> integers = Sequence.generate(0, i -> --i)
                 .take(10)
                 .intersperse(0, i -> i + 2)
                 .toList();
 
         System.out.println("integers = " + integers);
 
-        assertEquals(List.of(0, 0, -1, 2, -2, 4, -3, 6, -4, 8, -5, 10, -6, 12, -7, 14, -8, 16, -9), integers);
+        assertEquals(Arrays.asList(0, 0, -1, 2, -2, 4, -3, 6, -4, 8, -5, 10, -6, 12, -7, 14, -8, 16, -9), integers);
     }
 
     @Test
     void testIntersperseBySupplier() {
         @SuppressWarnings("squid:S5977") final Random random = new Random(0);
 
-        final var integers = Sequence.generate(0, i -> --i)
+        final List<Integer> integers = Sequence.generate(0, i -> --i)
                 .take(10)
                 .intersperse(() -> random.nextInt(20))
                 .toList();
 
         System.out.println("integers = " + integers);
 
-        assertEquals(List.of(0, 0, -1, 8, -2, 9, -3, 7, -4, 15, -5, 13, -6, 11, -7, 1, -8, 19, -9), integers);
+        assertEquals(Arrays.asList(0, 0, -1, 8, -2, 9, -3, 7, -4, 15, -5, 13, -6, 11, -7, 1, -8, 19, -9), integers);
     }
 
     @Test
@@ -764,7 +768,7 @@ class SequenceTest {
         ZonedDateTime current = now.atZone(ZoneId.systemDefault());
         It.printf("Current time is %s%n%n", current);
 
-        final var noneWholeHourZoneOffsetSummaries = getTimeZoneSummaries(now, id -> nonWholeHourOffsets(now, id));
+        final Sequence<String> noneWholeHourZoneOffsetSummaries = getTimeZoneSummaries(now, id -> nonWholeHourOffsets(now, id));
 
         noneWholeHourZoneOffsetSummaries.forEach(It::println);
 
@@ -804,17 +808,17 @@ class SequenceTest {
 
     @Test
     void testStepSequence() {
-        final var intSequence = Sequence.generate(0, i -> ++i)
+        final IntSequence intSequence = Sequence.generate(0, i -> ++i)
                 .skip(4)
                 .take(1_000)
                 .step(200)
                 .onEach(It::println)
                 .mapToInt(It::asInt);
 
-        final var integers = intSequence.toList();
-        final var sum = intSequence.sum();
+        final IntList integers = intSequence.toList();
+        final long sum = intSequence.sum();
 
-        final var pair = intSequence.boxed()
+        final Pair<IntMutableList, Integer> pair = intSequence.boxed()
                 .foldTwo(IntMutableList.empty(), IntMutableList::plus, 0, Integer::sum);
 
         assertAll(
@@ -827,12 +831,12 @@ class SequenceTest {
 
     @Test
     void testTakeWhileInclusiveZonedDateTime() {
-        final var zonedDateTimes = Sequence
+        final ListX<ZonedDateTime> zonedDateTimes = Sequence
                 .generate(ZonedDateTime.parse("2019-03-27T20:45:30+05:30[Asia/Calcutta]"), zdt -> zdt.plusHours(1))
                 .takeWhileInclusive(d -> d.isBefore(ZonedDateTime.parse("2020-03-27T20:45:30+00:00[UTC]")))
                 .toListX();
 
-        final var expected = LocalDateTime.of(2020, Month.MARCH, 28, 2, 45, 30);
+        final LocalDateTime expected = LocalDateTime.of(2020, Month.MARCH, 28, 2, 45, 30);
 
         assertAll(
                 () -> assertEquals(8791, zonedDateTimes.size()),
@@ -842,15 +846,15 @@ class SequenceTest {
 
     @Test
     void testGoldenRatioConvergenceBigDecimal() {
-        final var scale = 200;
-        final var sqrtOf5 = BigDecimal.valueOf(5).sqrt(MathContext.DECIMAL128);
-        var goldenRatio = (BigDecimal.ONE.add(sqrtOf5)).divide(BigDecimal.valueOf(2), scale, RoundingMode.HALF_UP);
+        final int scale = 200;
+        final BigDecimal sqrtOf5 = BigDecimal.valueOf(Math.sqrt(5.0));
+        BigDecimal goldenRatio = (BigDecimal.ONE.add(sqrtOf5)).divide(BigDecimal.valueOf(2), scale, RoundingMode.HALF_UP);
 
         It.println("goldenRatio by sqrt = " + goldenRatio);
 
-        final var MAX_ITERATIONS = 10_000;
+        final int MAX_ITERATIONS = 10_000;
 
-        final var approximations = IntSequence.generate(900, i -> ++i)
+        final ListX<BigDecimal> approximations = IntSequence.generate(900, i -> ++i)
                 .mapToObj(Generator::fibSumBd)
                 .zipWithNext((cur, next) -> next.divide(cur, scale, RoundingMode.HALF_UP))
                 .zipWithNext()
@@ -859,14 +863,14 @@ class SequenceTest {
                 .take(MAX_ITERATIONS)
                 .toListX();
 
-        final var actual = approximations.last();
+        final BigDecimal actual = approximations.last();
         It.println("golden ratio by seq = " + actual);
 
         approximations.forEach(It::println);
 
         assertAll(
                 () -> assertEquals(56, approximations.size()),
-                () -> assertEquals(goldenRatio.setScale(30, RoundingMode.HALF_UP), actual.setScale(30, RoundingMode.HALF_UP))
+                () -> assertEquals(goldenRatio.setScale(10, RoundingMode.HALF_UP), actual.setScale(10, RoundingMode.HALF_UP))
         );
     }
 
@@ -874,7 +878,7 @@ class SequenceTest {
     void testFlatmapIterator() {
         setProperty("org.openjdk.java.util.stream.tripwire", "false");
 
-        final var integers = IntRange.of(0, 1_000)
+        final ListX<Integer> integers = IntRange.of(0, 1_000)
                 .windowed(10)
                 .map(IntList::iterator)
                 .flatMap(i -> () -> i)
@@ -920,9 +924,9 @@ class SequenceTest {
 
         @Test
         void testSequenceFromNonIterable() {
-            final var nodes = new Nodes("hello", "this", "is", "a", "test");
+            final Nodes nodes = new Nodes("hello", "this", "is", "a", "test");
 
-            final var index = new AtomicInteger();
+            final AtomicInteger index = new AtomicInteger();
             final AtomicIterator<String> atomicIterator = action -> {
                 boolean hasNext = index.get() < nodes.size();
                 if (hasNext) {
@@ -931,7 +935,7 @@ class SequenceTest {
                 return hasNext;
             };
 
-            final var strings = Sequence.of(atomicIterator::asIterator)
+            final String[] strings = Sequence.of(atomicIterator::asIterator)
                     .filter(s -> !s.contains("e"))
                     .toTypedArray(String[]::new);
 
