@@ -4,7 +4,9 @@ import javafx.beans.property.IntegerProperty;
 import javafx.beans.property.SimpleIntegerProperty;
 import org.junit.jupiter.api.Test;
 
-import java.util.Set;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashSet;
 
 import static org.hzt.fx.utils.Listeners.forNewValue;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -27,7 +29,7 @@ class ListenersTest {
 
         value1.bindBidirectional(value2);
 
-        for (int value : Set.of(1, 2, 4, 56, 400, -4, 6, 3)) {
+        for (int value : Collections.unmodifiableSet(new HashSet<>(Arrays.asList(1, 2, 4, 56, 400, -4, 6, 3)))) {
             value1.set(value);
             assertEquals(value1.get(), value2.get());
         }
